--- a/Client/style.css
+++ b/Client/style.css
@@ -1,8 +1,18 @@
+:root {
+    --darkBlue:#1676BC;
+    --lightBlue: #1BA9F5;
+    --darkGrey:#343741;
+    --cyan:#00BCB0;
+    --orange: #FA744E;
+    --yellow: #ffc100;
+    --pink : #f04E98;
+  }
+
 body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-image: url(assets/background.svg);
+    background-image: url(./assets/background.svg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -26,6 +36,7 @@ body {
 #begin-page {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 60px;
@@ -33,11 +44,11 @@ body {
 
 .btn{
     width: 5em;
-    background-color: rgb(254,197,46);
+    background-color: var(--yellow);
     border: 0px;
     height: 1.6rem;
     border-radius: 20px;
-    color: rgb(44,47,80);
+    color: var(--darkBlue);
     font-size: 20px;
 }
 
@@ -47,8 +58,22 @@ body {
 }
 
 .btn-large{
-    width: 5em;
+    width: 8em;
 }
+
+.icon-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-image: url(./assets/fullscreen.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+  }
+  
 
 #home-page {
     height: 100vh;
@@ -63,10 +88,10 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 10px;
-    height: 120px;
-    width: 120px;
-    background-image: url(assets/logo.jpg);
+    margin: 5px;
+    aspect-ratio: 2/1;
+    height: 15vh;
+    background-image: url(./assets/logo.svg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -235,6 +260,12 @@ body {
     color: white;
 }
 
+#player-rows-start{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
 .row:last-child{
     border-radius: 2px 2px 10px 10px;
 }
@@ -272,17 +303,6 @@ body {
     font-size: 16px;
 }
 
-/* #waiting-for-player-dialogue{
-    width: 50%;
-    height: 40%;
-    background-color: rgb(254, 254, 254);
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
-
 #endScreen.hidden{
     display: none;
 }
@@ -302,5 +322,8 @@ body {
     display: none;
 }
 #finalScreen.hidden{
+    display: none;
+}
+#waiting-for-quizEnd.hidden{
     display: none;
 }
