--- a/Client/style.css
+++ b/Client/style.css
@@ -5,7 +5,9 @@
     --cyan:#00BCB0;
     --orange: #FA744E;
     --yellow: #ffc100;
+    --btn-disable:#9d9d9d;
     --pink : #f04E98;
+    --btn-text: #243C6C;
   }
 
 body {
@@ -16,6 +18,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: "Myriad Pro Bold";
 }
 
 .feedbackPage{
@@ -39,26 +42,55 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 20px;
+}
+
+#do-you-have-power-of-search{
+    aspect-ratio: 32/10;
+    height: 30vh;
+}
+
+#choose-gamemode {
+    font-family: "Myriad Pro Bold";
+    font-size: 45pt;
+    color: white;
 }
 
 .btn{
     width: 5em;
+    height: 1.6em;
     background-color: var(--yellow);
-    border: 0px;
-    height: 1.6rem;
     border-radius: 20px;
-    color: var(--darkBlue);
-    font-size: 20px;
+    color: var(--btn-text);
+    font-size: 30pt;
+    border-radius: 60px;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4);
+    font-weight: bold;
+}
+
+.btn:disabled {
+    background-color: var(--btn-disable);
+    color: var(--darkGrey);
+    box-shadow: none;
+    cursor: not-allowed;
 }
 
 .btn:not([disabled]):active{
-    background-color: rgb(0, 203, 203);
+    background-color: var(--btn-disable);
     translate: 0 2px;
 }
 
 .btn-large{
-    width: 8em;
+    width: 7em;
+    height: 1.5em;
+    font-family: "Myriad Pro Bold";
+    font-size: 30pt;
+    font-weight: bold;
+    border-radius: 60px;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon-btn {
@@ -72,16 +104,51 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
-  }
-  
+}
+
+#fullscreen-button{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 60px;
+    height: 60px;
+}
 
 #home-page {
     height: 100vh;
     display: flex;
-    gap: 20px;
+    margin: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: fit-content;
+}
+
+#rules-page-blue{
+    aspect-ratio: 414/100;
+    height: 30vh;
+}
+
+#input-name-container{
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+#input-name-container label{
+    color: var(--yellow);
+    font-size: 35pt;
+    font-weight: bold;
+}
+
+#input-name-container input{
+    width: 40%;
+    height: 1.5em;
+    font-size: 30pt;
+    font-family: "Myriad Pro Bold";
+    text-align: center;
 }
 
 .logo {
@@ -103,21 +170,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color:rgb(255, 251, 0);
+    color: var(--yellow);
 }
 
 #waiting-page h1{
-    font-size: 25px;
-}
-
-.lobby{
-    height: 70%;
-    width: 80%;
-    display: flex;
-    background-color: rgba(250, 235, 215, 0.44);
-    border-radius: 5px;
-    justify-content: space-around;
-    align-items: center;
+    width: 60%;
+    text-align: center;
+    font-size: 68px;
 }
 
 #game-screen{
@@ -126,20 +185,31 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
 }
 
-.countdown{
-    width: 100px;
-    height: 30px;
-    background-color:rgb(54, 31, 119);
+.countdown {
+    aspect-ratio: 1;
+    height: 10vh;
     position: absolute;
     top: 0;
     left: 0;
     margin: 20px;
+    
+    border: 2px;
+    border-style: dashed;
+    border-width: 7px;
+    border-radius: 15px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    background-color: var(--darkBlue);
+
     text-align: center;
-    font-size: 20px;
+    font-size: 68px;
     color: white;
+    font-weight: bold;
 }
 
 .question-area{
@@ -147,67 +217,111 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap:10px;
+    max-width: fit-content;
+}
+
+.question-area button{
+    margin-bottom: 5vh;
+    margin-top: 5px;
+}
+
+#clue{
+    color: white;
+    font-size: 30pt;
+    text-decoration: underline;
 }
 
 .question{
-    margin: 10% 10%;
-    color: white;
+    text-align: center;
+    width: 80%;
+    color: var(--yellow);
+    font-size: 25pt;
 }
 
 .answer-area{
     display: flex;
-    width: 80vw;
+    width: 100vw;
     justify-content: center;
     gap: 10px;
+    margin-bottom: 2vh;
+    margin-top: 10vh;
 }
 
 .input-box{
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     background-color: white;
-    color: black;
+    color: var(--btn-text);
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 35px;
+    border-radius: 12px;
 }
+
+.correct-answer{
+    background-color: var(--cyan);
+}
+
+.wrong-answer{
+    background-color: rgb(255, 103, 103);
+    animation: wiggle .5s ease-in;
+}
+
 .highlight{
-    background-color: rgb(82, 82, 82);
+    /* background-color: rgb(166, 166, 166); */
+    height: 68px;
+    width: 68px;
+    transform: translateY(-4px);
 }
 
 .option-area{
     display: flex;
     gap: 10px;
+    margin-left: 90px;
 }
 
 .option{
-    background-color: aquamarine;
-    width: 30px;
-    height: 30px;
+    background-color: var(--pink);
+    width: 60px;
+    height: 60px;
+    border-radius: 12px;
+    font-family: "Myriad Pro Bold";
+    font-size: 35px;
+    border: none;
+    font-weight: bold;
+    color: var(--btn-text);
+}
+.option:disabled{
+    background-color: var(--btn-disable);
 }
 
 .remove-option{
     margin-left: 30px;
+    
     background-image: url(assets/delete.png);
     background-position: center;
-    background-size: contain;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    
+    width: 60px;
+    height: 60px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.4);
 }
 
 #endScreen{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap:40px;
+    gap:20px;
     justify-content: center;
     align-items: center;
 }
 
 .leaderboard{
-    width: 40vw;
-    height: auto;
+    width: 45vw;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -217,8 +331,8 @@ body {
 
 .leaderboard-title{
     width: 100%;
-    height: 50px;
-    background-color: yellow;
+    height: 65px;
+    background-color: var(--yellow);
     border-radius: 10px 10px 2px 2px;
     text-align: center;
     display: flex;
@@ -227,8 +341,9 @@ body {
 }
 
 .leaderboard-title h1{
-    font-size: 25px;
-    color: rgb(40, 60, 112);
+    font-size: 45pt;
+    color: var(--btn-text);
+    font-weight: bold;
 }
 
 
@@ -236,28 +351,32 @@ body {
     padding: 0 10px;
     display: flex;
     flex-direction: row;
-    height: 30px;
+    height: 40px;
     align-items: center;
     justify-content: space-between;
     background-color: rgb(209,210,212);
     border-radius: 5px;
+    padding: 0 40px;
 }
 
 .row h1{
-    font-size: 20px;
+    font-size: 20pt;
     color: rgb(11,29,79);
+    font-weight: normal;
 }
 
 .row-heading{
-    background-color: rgb(239,79,153);
+    background-color: var(--pink);
     border-radius: 2px;
-    height: 40px;
+    height: 50px;
+    padding: 0 40px;
 }
 
 .row-heading h1{
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 24pt;
     color: white;
+    font-weight: lighter;
 }
 
 #player-rows-start{
@@ -270,23 +389,10 @@ body {
     border-radius: 2px 2px 10px 10px;
 }
 
-.participant-container{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    color: white;
-}
-
-.popup{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.waiting-for-quiz-to-end{
+    color: var(--yellow);
+    font-size: 20pt;
+    font-weight: lighter;
 }
 
 .finalScreenContainer{
@@ -295,12 +401,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color:yellow;
 }
 
-.waiting-for-quiz-to-end{
-    color: red;
-    font-size: 16px;
+.finalScreenContainer button{
+    margin-top: 10vh;
 }
 
 #endScreen.hidden{
@@ -327,3 +431,27 @@ body {
 #waiting-for-quizEnd.hidden{
     display: none;
 }
+
+/* Animations */
+  
+  @keyframes wiggle {
+      0% {
+          transform: rotate(0deg);
+      }
+
+      25% {
+          transform: rotate(5deg);
+      }
+
+      50% {
+          transform: rotate(-5deg);
+      }
+
+      75% {
+          transform: rotate(5deg);
+      }
+
+      100% {
+          transform: rotate(0deg);
+      }
+  }
